--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ body {
 }
 .titulo {
   margin-bottom: 100px;
-  font-family: "Times New Roman", Arial, sans-serif;
+  font-family: "Arial Narrow", Arial, sans-serif;
   color: #f8f1ae;
   position: absolute;
   font-weight: bold;
